<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/seafoam"
    android:backgroundTint="#FFFFFF"
    tools:context=".FirstCourseActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/done_button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:shadowColor="@color/white"
        android:textColor="@color/seafoam"
        android:text="Done"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter_button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:onClick="onEnterClicked"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:shadowColor="@color/white"
        android:textColor="@color/seafoam"
        android:text="Enter"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_spinner" />

    <Spinner
        android:id="@+id/quarter_spinner"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/seafoam"
        android:backgroundTint="#FFFFFF"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quarter_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/seafoam"
        android:backgroundTint="#FFFFFF"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/subject_view"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Subject"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject_text"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/number_view"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Number"
        android:inputType="number"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_text" />

    <TextView
        android:id="@+id/subject_text"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="120dp"
        android:text="Course Subject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_text"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="220dp"
        android:text="Course Number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quarter_text"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="320dp"
        android:text="Quarter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/year_text"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="420dp"
        android:text="Year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>