<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="quarter_array">
        <item>Fall</item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
    </string-array>

    <string-array name="year_array">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

</resources>