<resources>
    <string name="app_name">Birds of a Feather</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="photo">Photo</string>
    <string name="enter">Enter</string>
    <string name="quarter">Quarter</string>
    <string name="number">Number</string>
    <string name="year">Year</string>
    <string name="subject">Subject</string>
    <string name="done">Done</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="photo_url">Photo URL</string>
    <string name="course_subject">Course Subject</string>
    <string name="course_number">Course Number</string>
    <string name="delete_db">Delete DB</string>
    <string name="shared_courses">Shared Courses</string>
    <string name="profile_picture">profile picture</string>
</resources>