<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".NameActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="320dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:onClick="onConfirmClicked"
        android:shadowColor="@color/white"
        android:text="@string/confirm"
        android:textColor="@color/seafoam"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/name_view"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>